@startuml

package "de.jfachwert" {

    interface Fachwert
    class AbstractFachwert

}

package "de.jfachwert.bank" {

    class Kontonummer
    class IBAN
    class BLZ
    class BIC
    class Bankverbindung {
        IBAN iban
        BIC bic
    }
    class Zinssatz

}

Fachwert <|.. AbstractFachwert

AbstractFachwert <|-- Kontonummer
AbstractFachwert <|-- IBAN
AbstractFachwert <|-- BLZ
AbstractFachwert <|-- BIC
Fachwert <|.. Bankverbindung
Fachwert <|.. Zinssatz

interface javax.money.MonetaryAmount #white

javax.money.MonetaryAmount <.. Zinssatz

class de.jfachwert.math.Prozent

de.jfachwert.math.Prozent <.. Zinssatz

@enduml
